--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: cwcw
-subtitle: Blog of Ian Cullinane
+title: Chop Wood, Carry Water
+subtitle: Posts on code, art, game theory, distributed systems, and organizations
 ---
